--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec node ./server.js"
+    "dev": "webpack -wd",
+    "start": "nodemon --exec ./node_modules/.bin/babel-node server.js --ignore '/public'"
   },
   "author": "",
   "license": "ISC",
