--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
-    "mongoose": "^4.13.0"
+    "mongoose": "^4.13.0",
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
